--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="bs">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Finance — Home</title>
-  <link rel="stylesheet" href="style.css"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Finance — About</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="site-header">
@@ -12,7 +12,7 @@
       <a href="index.html" class="brand"><img src="/images/transparentnost_loga.png" alt="Logo" class="logo"/></a>
       <nav class="main-nav">
         <a href="plans.html">Plans</a>
-        <a href="about.html">About</a>
+        <a href="about.html" class="active">About</a>
         <a href="discord.html">Join Discord</a>
         <a href="community.html">Join Community</a>
       </nav>
@@ -22,17 +22,10 @@
     </div>
   </header>
 
-  <main>
-    <section id="home" class="hero">
-      <div class="smoke" aria-hidden="true"></div>
-      <div class="hero-inner container">
-        <p class="eyebrow">Two Solutions.</p>
-        <h1><span>UNLIMITED OPPORTUNITY.</span></h1>
-        <p class="sub">
-          Your gateway to mastering the markets with top-tier education and community.
-        </p>
-        <a href="about.html" class="btn pill">LEARN MORE…</a>
-      </div>
+  <main class="page-top-pad">
+    <section class="section container">
+      <h2>About Us</h2>
+      <p>Ovde upiši misiju, tim i pristup edukaciji i zajednici.</p>
     </section>
   </main>
 
