--- a/plans.html
+++ b/plans.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="bs">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Finance — Home</title>
-  <link rel="stylesheet" href="style.css"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Finance — Plans</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="site-header">
     <div class="container nav-wrap">
       <a href="index.html" class="brand"><img src="/images/transparentnost_loga.png" alt="Logo" class="logo"/></a>
       <nav class="main-nav">
-        <a href="plans.html">Plans</a>
+        <a href="plans.html" class="active">Plans</a>
         <a href="about.html">About</a>
         <a href="discord.html">Join Discord</a>
         <a href="community.html">Join Community</a>
@@ -22,16 +22,14 @@
     </div>
   </header>
 
-  <main>
-    <section id="home" class="hero">
-      <div class="smoke" aria-hidden="true"></div>
-      <div class="hero-inner container">
-        <p class="eyebrow">Two Solutions.</p>
-        <h1><span>UNLIMITED OPPORTUNITY.</span></h1>
-        <p class="sub">
-          Your gateway to mastering the markets with top-tier education and community.
-        </p>
-        <a href="about.html" class="btn pill">LEARN MORE…</a>
+  <main class="page-top-pad">
+    <section class="section container">
+      <h2>Our Plans</h2>
+      <p>Choose the perfect plan that suits your trading journey.</p>
+      <div class="plans-grid">
+        <div class="plan-card"><h3>Starter</h3><p>Community + osnove.</p><span class="price">$19/mo</span></div>
+        <div class="plan-card"><h3>Pro</h3><p>Napredne lekcije + live.</p><span class="price">$49/mo</span></div>
+        <div class="plan-card"><h3>Elite</h3><p>Mentorstvo + privatna soba.</p><span class="price">$99/mo</span></div>
       </div>
     </section>
   </main>
