--- a/discord.html
+++ b/discord.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="bs">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Finance — Home</title>
-  <link rel="stylesheet" href="style.css"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Finance — Discord</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="site-header">
@@ -13,7 +13,7 @@
       <nav class="main-nav">
         <a href="plans.html">Plans</a>
         <a href="about.html">About</a>
-        <a href="discord.html">Join Discord</a>
+        <a href="discord.html" class="active">Join Discord</a>
         <a href="community.html">Join Community</a>
       </nav>
       <button class="hamburger" aria-label="Open menu" aria-expanded="false">
@@ -22,17 +22,11 @@
     </div>
   </header>
 
-  <main>
-    <section id="home" class="hero">
-      <div class="smoke" aria-hidden="true"></div>
-      <div class="hero-inner container">
-        <p class="eyebrow">Two Solutions.</p>
-        <h1><span>UNLIMITED OPPORTUNITY.</span></h1>
-        <p class="sub">
-          Your gateway to mastering the markets with top-tier education and community.
-        </p>
-        <a href="about.html" class="btn pill">LEARN MORE…</a>
-      </div>
+  <main class="page-top-pad">
+    <section class="section container">
+      <h2>Join Our Discord</h2>
+      <p>Pridruži se zajednici za dnevne update-e i diskusije.</p>
+      <a class="btn pill" href="https://discord.com/invite/your-invite" target="_blank" rel="noopener">Open Discord</a>
     </section>
   </main>
 
