--- a/discord.html
+++ b/discord.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Finance — Discord</title>
+  <title>Fico Trading Hub — Discord</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,7 +14,6 @@
         <a href="plans.html">Plans</a>
         <a href="about.html">About</a>
         <a href="discord.html" class="active">Join Discord</a>
-        <a href="community.html">Join Community</a>
       </nav>
       <button class="hamburger" aria-label="Open menu" aria-expanded="false">
         <span></span><span></span><span></span>
