--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Finance — Home</title>
+  <title>Fico Trading Hub</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
@@ -14,7 +14,6 @@
         <a href="plans.html">Plans</a>
         <a href="about.html">About</a>
         <a href="discord.html">Join Discord</a>
-        <a href="community.html">Join Community</a>
       </nav>
       <button class="hamburger" aria-label="Open menu" aria-expanded="false">
         <span></span><span></span><span></span>
@@ -24,7 +23,6 @@
 
   <main>
     <section id="home" class="hero">
-      <div class="smoke" aria-hidden="true"></div>
       <div class="hero-inner container">
         <p class="eyebrow">Two Solutions.</p>
         <h1><span>UNLIMITED OPPORTUNITY.</span></h1>
@@ -34,6 +32,7 @@
         <a href="about.html" class="btn pill">LEARN MORE…</a>
       </div>
     </section>
+    
   </main>
 
   <footer class="footer">
