--- a/about.html
+++ b/about.html
@@ -7,15 +7,26 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- NAVBAR (isti kao index.html) -->
   <header class="site-header">
     <div class="container nav-wrap">
-      <a href="index.html" class="brand"><img src="/images/transparentnost_loga.png" alt="Logo" class="logo"/></a>
+
+      <a href="index.html" class="brand">
+        <div class="logo-wrap">
+          <img src="/images/transparentnost_loga.png" alt="Logo" class="logo">
+          <span class="logo-text">Fico Trading Hub</span>
+        </div>
+      </a>
+
       <nav class="main-nav">
-        <a href="plans.html">Plans</a>
+        <a href="index.html">Home</a>
         <a href="about.html" class="active">About</a>
-        <a href="discord.html">Join Discord</a>
+        <a href="plans.html">Plans</a>
       </nav>
-      <button class="hamburger" aria-label="Open menu" aria-expanded="false">
+
+      <a href="https://discord.gg/your-discord-link" target="_blank" class="btn pill">Join Discord</a>
+
+      <button class="hamburger" aria-label="Menu">
         <span></span><span></span><span></span>
       </button>
     </div>
@@ -23,8 +34,8 @@
 
   <main class="page-top-pad">
     <section class="section container">
-      <h2>About Us</h2>
-      <p>Ovde upiši misiju, tim i pristup edukaciji i zajednici.</p>
+      <h2>About</h2>
+      <p>Ovde dodaj svoj sadržaj o projektu, timu i misiji.</p>
     </section>
   </main>
 
