--- a/index.html
+++ b/index.html
@@ -6,32 +6,51 @@
   <title>Fico Trading Hub</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
-<body>
+<body class="home-page">
+
   <header class="site-header">
-    <div class="container nav-wrap">
-      <a href="index.html" class="brand"><img src="/images/transparentnost_loga.png" alt="Logo" class="logo"/></a>
-      <nav class="main-nav">
-        <a href="plans.html">Plans</a>
-        <a href="about.html">About</a>
-        <a href="discord.html">Join Discord</a>
-      </nav>
-      <button class="hamburger" aria-label="Open menu" aria-expanded="false">
-        <span></span><span></span><span></span>
-      </button>
-    </div>
-  </header>
+  <div class="container nav-wrap">
+
+    <!-- Logo -->
+    <a href="index.html" class="brand">
+  <div class="logo-wrap">
+    <img src="/images/transparentnost_loga.png" alt="Logo" class="logo">
+    <span class="logo-text">Fico Trading Hub</span>
+  </div>
+</a>
+
+
+    <!-- Glavni meni -->
+    <nav class="main-nav">
+      <a href="index.html" class="active">Home</a>
+      <a href="about.html">About</a>
+      <a href="plans.html">Plans</a>
+    </nav>
+
+    <!-- Join Discord dugme desno -->
+    <a href="https://discord.gg/DSs3pgTQ" target="_blank" class="btn pill">Join Discord</a>
+
+    <!-- Hamburger meni -->
+    <button class="hamburger" aria-label="Menu">
+      <span></span><span></span><span></span>
+    </button>
+  </div>
+</header>
+
 
   <main>
     <section id="home" class="hero">
-      <div class="hero-inner container">
-        <p class="eyebrow">Two Solutions.</p>
-        <h1><span>UNLIMITED OPPORTUNITY.</span></h1>
-        <p class="sub">
-          Your gateway to mastering the markets with top-tier education and community.
-        </p>
-        <a href="about.html" class="btn pill">LEARN MORE…</a>
-      </div>
-    </section>
+  <div class="hero-inner container">
+    <p class="eyebrow">Two Solutions.</p>
+    <h1>UNLIMITED OPPORTUNITY.</h1>
+    <p class="sub">
+      Your gateway to mastering the markets with top-tier education and community.
+    </p>
+    <a href="about.html" class="btn pill hero-btn">LEARN MORE…</a>
+  </div>
+</section>
+
+
     
   </main>
 
