final for today

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         <a href="plans.html">Plans</a>
       </nav>
 
-      <a href="https://discord.gg/your-discord-link" target="_blank" class="btn pill">Join Discord</a>
+      <a href="https://discord.com/invite/DSs3pgTQ" target="_blank" class="btn pill">Join Discord</a>
 
       <button class="hamburger" aria-label="Menu">
         <span></span><span></span><span></span>
@@ -40,7 +40,7 @@
   </main>
 
   <footer class="footer">
-    <div class="container">© <span id="year"></span> Finance. All rights reserved.</div>
+    <div class="container">© <span id="year"></span> Fico Trading Hub. All rights reserved.</div>
   </footer>
   <script src="app.js"></script>
 </body>
