--- a/plans.html
+++ b/plans.html
@@ -24,7 +24,7 @@
         <a href="plans.html" class="active">Plans</a>
       </nav>
 
-      <a href="https://discord.gg/your-discord-link" target="_blank" class="btn pill">Join Discord</a>
+      <a href="https://discord.com/invite/DSs3pgTQ" target="_blank" class="btn pill">Join Discord</a>
 
       <button class="hamburger" aria-label="Menu">
         <span></span><span></span><span></span>
@@ -34,19 +34,18 @@
 
   <main class="page-top-pad">
     <section class="section container">
-      <h2>Our Plans</h2>
-      <p>Izlistaj planove i pogodnosti.</p>
+      <h2 style="text-align: center;">Our Plans</h2>
+      <p style="text-align: center;">Izlistaj planove i pogodnosti.</p>
 
       <div class="plans-grid">
-        <div class="plan-card"><h3>Starter</h3><p>Community + osnove.</p><span class="price">$19/mo</span></div>
-        <div class="plan-card"><h3>Pro</h3><p>Napredne lekcije + live.</p><span class="price">$49/mo</span></div>
-        <div class="plan-card"><h3>Elite</h3><p>Mentorstvo + privatna soba.</p><span class="price">$99/mo</span></div>
+        <div class="plan-card"><h3>Vip grupa</h3><p>Community + osnove.</p><span class="price">$19/mo</span></div>
+        <div class="plan-card"><h3>Kurs</h3><p>Napredne lekcije + live.</p><span class="price">$49/mo</span></div>
       </div>
     </section>
   </main>
 
   <footer class="footer">
-    <div class="container">© <span id="year"></span> Finance. All rights reserved.</div>
+    <div class="container">© <span id="year"></span> Fico Trading Hub. All rights reserved.</div>
   </footer>
   <script src="app.js"></script>
 </body>
