--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </main>
 
   <footer class="footer">
-    <div class="container">© <span id="year"></span> Finance. All rights reserved.</div>
+    <div class="container">© <span id="year"></span> Fico Trading Hub. All rights reserved.</div>
   </footer>
   <script src="app.js"></script>
 </body>
