--- a/plans.html
+++ b/plans.html
@@ -24,7 +24,7 @@
         <a href="plans.html" class="active">Plans</a>
       </nav>
 
-      <a href="https://discord.com/invite/DSs3pgTQ" target="_blank" class="btn pill">Join Discord</a>
+      <a href="https://discord.gg/your-discord-link" target="_blank" class="btn pill">Join Discord</a>
 
       <button class="hamburger" aria-label="Menu">
         <span></span><span></span><span></span>
@@ -35,11 +35,17 @@
   <main class="page-top-pad">
     <section class="section container">
       <h2 style="text-align: center;">Our Plans</h2>
-      <p style="text-align: center;">Izlistaj planove i pogodnosti.</p>
+      <h5 style="text-align: center;">Izaberi svoj plan.</h5>
+
 
       <div class="plans-grid">
-        <div class="plan-card"><h3>Vip grupa</h3><p>Community + osnove.</p><span class="price">$19/mo</span></div>
-        <div class="plan-card"><h3>Kurs</h3><p>Napredne lekcije + live.</p><span class="price">$49/mo</span></div>
+        <div class="plan-card"><h3>Vip grupa</h3><p>Community + osnove.</p> <a href="payment.html"><span class="price">$65/Month</span></a>
+
+
+</span></div>
+        <div class="plan-card"><h3>Kurs</h3><p>Napredne lekcije + live.</p><a href="payment.html"><span class="price">$300/Month</span></a>
+
+
       </div>
     </section>
   </main>
