--- a/plans.html
+++ b/plans.html
@@ -43,7 +43,7 @@
 
 
 </span></div>
-        <div class="plan-card"><h3>Kurs</h3><p>Napredne lekcije + live.</p><a href="payment.html"><span class="price">$300/Month</span></a>
+        <div class="plan-card"><h3>Kurs</h3><p>Napredne lekcije + live.</p><a href="payment.html"><span class="price">$300/OneTimePayment</span></a>
 
 
       </div>
