--- a/about.html
+++ b/about.html
@@ -7,10 +7,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- NAVBAR (isti kao index.html) -->
+  <!-- NAVBAR -->
   <header class="site-header">
     <div class="container nav-wrap">
-
       <a href="index.html" class="brand">
         <div class="logo-wrap">
           <img src="/images/transparentnost_loga.png" alt="Logo" class="logo">
@@ -22,9 +21,10 @@
         <a href="index.html">Home</a>
         <a href="about.html" class="active">About</a>
         <a href="plans.html">Plans</a>
+        <a href="kontakt.html">Contact</a>
       </nav>
 
-      <a href="https://discord.com/invite/DSs3pgTQ" target="_blank" class="btn pill">Join Discord</a>
+      <a href="https://discord.gg/DSs3pgTQ" target="_blank" class="btn pill">Join Discord</a>
 
       <button class="hamburger" aria-label="Menu">
         <span></span><span></span><span></span>
@@ -32,10 +32,19 @@
     </div>
   </header>
 
-  <main class="page-top-pad">
-    <section class="section container">
-      <h2>About</h2>
-      <p>Ovde dodaj svoj sadržaj o projektu, timu i misiji.</p>
+  <main>
+    <section class="section container about-section">
+      <div class="about-text">
+        <h2>Bok! Ja sam Filip!</h2>
+        <p>Osnivač platforme Fico Trading Hub i strastveni trader s više od 5 godina iskustva na Crypto i Forex tržištima.</p>
+        <p>Kroz godine sam prošao brojne izazove, razvio vlastite strategije i stekao duboko razumijevanje tržišnih kretanja.</p>
+        <p>Danas sam verificirani trader u 5%ers Prop Firmi, što potvrđuje profesionalnu razinu mog znanja i discipline u trgovanju.</p>
+        <p>Do sada sam radio s više od 50 zadovoljnih korisnika, kojima sam pomogao unaprijediti razumijevanje tržišta i izgraditi stabilan pristup trgovanju.</p>
+      </div>
+
+      <div class="about-image">
+        <img src="/images/program-achievement-1758921232676.png" alt="Filip">
+      </div>
     </section>
   </main>
 
