--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   <header class="site-header">
   <div class="container nav-wrap">
 
+    
+
+
+
+
     <!-- Logo -->
     <a href="index.html" class="brand">
   <div class="logo-wrap">
@@ -25,6 +30,7 @@
       <a href="index.html" class="active">Home</a>
       <a href="about.html">About</a>
       <a href="plans.html">Plans</a>
+      <a href="kontakt.html">Contact</a>
     </nav>
 
     <!-- Join Discord dugme desno -->
@@ -41,12 +47,17 @@
   <main>
     <section id="home" class="hero">
   <div class="hero-inner container">
-    <p class="eyebrow">Two Solutions.</p>
-    <h1>UNLIMITED OPPORTUNITY.</h1>
+    <p class="eyebrow"></p>
+    <h1>Fico Trading Hub</h1>
+    <br>
+    
     <p class="sub">
-      Your gateway to mastering the markets with top-tier education and community.
+    Dobrodošli u Fico Trading Hub!<br>
+    Vaš ulaz u svijet profesionalnog trgovanja na Crypto i Forex tržištima.
+    Kroz edukaciju, mentorstvo i podršku zajednice, pomažemo vam da razvijete znanje, strategiju i mindset uspješnog tradera.
     </p>
-    <a href="about.html" class="btn pill hero-btn">LEARN MORE…</a>
+
+    <a href="about.html" class="btn pill hero-btn">Saznaj više</a>
   </div>
 </section>
 
