--- a/plans.html
+++ b/plans.html
@@ -19,7 +19,7 @@
       <nav class="main-nav">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="plans.html" class="active">Plans</a>
+        <a href="plans.html">Plans</a>
         <a href="kontakt.html">Contact</a>
       </nav>
 
