--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
       <nav class="main-nav">
         <a href="index.html">Home</a>
-        <a href="about.html" class="active">About</a>
+        <a href="about.html">About</a>
         <a href="plans.html">Plans</a>
         <a href="kontakt.html">Contact</a>
       </nav>
