--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- Glavni meni -->
     <nav class="main-nav">
-      <a href="index.html" class="active">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="plans.html">Plans</a>
       <a href="kontakt.html">Contact</a>
