more mini fixes

--- a/plans.html
+++ b/plans.html
@@ -52,7 +52,7 @@
         <div class="plan">
           <h3>Smart Money (Approach) to Trading</h3>
           <p>Kompletan tečaj koji te vodi od osnova do naprednog Smart Money pristupa!</p>
-          <a href="payment.html" class="cta">€700/Month</a>
+          <a href="payment.html" class="cta">€700/OneTimePayment</a>
         </div>
       </div>
     </section>
