--- a/kontakt.html
+++ b/kontakt.html
@@ -108,7 +108,7 @@
 
       <!-- lijevi blok s podacima -->
       <div class="left">
-        <h1>Kontakt informacije</h1>
+        <h1>Kontakt</h1>
         <p class="sub">Slobodno nas kontaktiraj putem emaila, telefona ili Discorda.</p>
 
         <div class="item">
@@ -117,7 +117,7 @@
         </div>
 
         <div class="item">
-          <div class="label">Broj telefona</div>
+          <div class="label">Broj mobitela</div>
           <div class="value"><a href="tel:+385998683347">+385 99 8683 347</a></div>
         </div>
 
