--- a/kontakt.html
+++ b/kontakt.html
@@ -83,7 +83,7 @@
         <a href="kontakt.html">Contact</a>
       </nav>
 
-      <a href="https://discord.gg/DSs3pgTQ" target="_blank" class="btn pill">Join Discord</a>
+      <a href="https://discord.gg/mSSNdsRMRc" target="_blank" class="btn pill">Join Discord</a>
 
       <button class="hamburger" aria-label="Menu">
         <span></span><span></span><span></span>
@@ -124,7 +124,7 @@
         <div class="item">
   <div class="label">Discord ime</div>
   <div class="value">
-    <a href="https://discord.com/users/387958772347437058" target="_blank">IamFico#2477</a>
+    <a href="https://discord.com/users/426851099711111199" target="_blank">IamFico#2477</a>
   </div>
 </div>
 
