--- a/payment.html
+++ b/payment.html
@@ -205,7 +205,7 @@
         <a href="kontakt.html">Contact</a>
       </nav>
 
-      <a href="https://discord.gg/your-discord-link" target="_blank" class="btn pill">Join Discord</a>
+      <a href="https://discord.gg/mSSNdsRMRc" target="_blank" class="btn pill">Join Discord</a>
 
       <button class="hamburger" aria-label="Menu">
         <span></span><span></span><span></span>
