--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         <a href="kontakt.html">Contact</a>
       </nav>
 
-      <a href="https://discord.gg/DSs3pgTQ" target="_blank" class="btn pill">Join Discord</a>
+      <a href="https://discord.gg/mSSNdsRMRc" target="_blank" class="btn pill">Join Discord</a>
 
       <button class="hamburger" aria-label="Menu">
         <span></span><span></span><span></span>
