--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </nav>
 
     <!-- Join Discord dugme desno -->
-    <a href="https://discord.gg/DSs3pgTQ" target="_blank" class="btn pill">Join Discord</a>
+    <a href="https://discord.gg/mSSNdsRMRc" target="_blank" class="btn pill">Join Discord</a>
 
     <!-- Hamburger meni -->
     <button class="hamburger" aria-label="Menu">
