--- a/kontakt.html
+++ b/kontakt.html
@@ -110,20 +110,19 @@
   <div class="label">Broj mobitela</div>
   <div class="value">
     <a href="tel:+385998683347">+385 99 8683 347</a>
-    <a href="https://t.me/ficotradinghub" target="_blank" class="tg-inline" title="Telegram">
+    <a href="https://t.me/ficotradinghub" target="_blank" rel="noopener" class="tg-badge-inline">
       <svg class="tg-icon" viewBox="0 0 240 240" xmlns="http://www.w3.org/2000/svg">
-        <defs>
-          <linearGradient id="g" x1="0" y1="0" x2="1" y2="1">
-            <stop offset="0" stop-color="#2AABEE"/>
-            <stop offset="1" stop-color="#229ED9"/>
-          </linearGradient>
-        </defs>
+        <defs><linearGradient id="g" x1="0" y1="0" x2="1" y2="1">
+          <stop offset="0" stop-color="#2AABEE"/><stop offset="1" stop-color="#229ED9"/></linearGradient></defs>
         <circle cx="120" cy="120" r="120" fill="url(#g)"/>
         <path fill="#fff" d="M178 79c3-12-4-10-12-7l-110 42c-7 3-7 8-1 10l28 9 11 36c2 6 4 7 8 3l17-16 29 21c5 3 9 1 10-5l20-92zM95 136l60-47c3-2 2-3-1-1l-67 42-1 6 9 0z"/>
       </svg>
+      <span>Telegram</span>
     </a>
   </div>
 </div>
+
+
 
 
         <div class="item">
